tests/baselines/reference/binopAssignmentShouldHaveType.errors.txt
binopAssignmentShouldHaveType.ts(3,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== binopAssignmentShouldHaveType.ts (1 errors) ====
    declare var console;
    "use strict";
    module Test {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
     export class Bug {
      getName():string {
       return "name";
      }
      bug() {
       var name:string= null;
       if ((name= this.getName()).length > 0) {
        console.log(name);
       }
      }
     }
    }
    
     
    
    